--- a/Pages/Bugs/Create.cshtml
+++ b/Pages/Bugs/Create.cshtml
@@ -49,6 +49,11 @@
                 <span asp-validation-for="Bug.Reporter" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Bug.Summary" class="control-label"></label>
+                <input asp-for="Bug.Summary" class="form-control" />
+                <span asp-validation-for="Bug.Summary" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
