--- a/Pages/Bugs/Delete.cshtml
+++ b/Pages/Bugs/Delete.cshtml
@@ -54,6 +54,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bug.Reporter)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bug.Summary)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bug.Summary)
+        </dd>
     </dl>
     
     <form method="post">
