--- a/Pages/Bugs/Details.cshtml
+++ b/Pages/Bugs/Details.cshtml
@@ -53,6 +53,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Bug.Reporter)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Bug.Summary)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Bug.Summary)
+        </dd>
     </dl>
 </div>
 <div>
