--- a/Pages/Bugs/Index.cshtml
+++ b/Pages/Bugs/Index.cshtml
@@ -34,6 +34,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Bug[0].Reporter)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bug[0].Summary)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -60,6 +63,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Reporter)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Summary)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
