Added name changes

--- a/Pages/Bugs/Create.cshtml
+++ b/Pages/Bugs/Create.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Bug.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bug.creationDate" class="control-label"></label>
-                <input asp-for="Bug.creationDate" class="form-control" />
-                <span asp-validation-for="Bug.creationDate" class="text-danger"></span>
+                <label asp-for="Bug.CreationDate" class="control-label"></label>
+                <input asp-for="Bug.CreationDate" class="form-control" />
+                <span asp-validation-for="Bug.CreationDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Bug.dueDate" class="control-label"></label>
-                <input asp-for="Bug.dueDate" class="form-control" />
-                <span asp-validation-for="Bug.dueDate" class="text-danger"></span>
+                <label asp-for="Bug.DueDate" class="control-label"></label>
+                <input asp-for="Bug.DueDate" class="form-control" />
+                <span asp-validation-for="Bug.DueDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Bug.Status" class="control-label"></label>
