--- a/Pages/Bugs/Delete.cshtml
+++ b/Pages/Bugs/Delete.cshtml
@@ -19,16 +19,16 @@
             @Html.DisplayFor(model => model.Bug.Title)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bug.creationDate)
+            @Html.DisplayNameFor(model => model.Bug.CreationDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bug.creationDate)
+            @Html.DisplayFor(model => model.Bug.CreationDate)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Bug.dueDate)
+            @Html.DisplayNameFor(model => model.Bug.DueDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Bug.dueDate)
+            @Html.DisplayFor(model => model.Bug.DueDate)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Bug.Status)
