--- a/Pages/Bugs/Index.cshtml
+++ b/Pages/Bugs/Index.cshtml
@@ -17,10 +17,10 @@
                 @Html.DisplayNameFor(model => model.Bug[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Bug[0].creationDate)
+                @Html.DisplayNameFor(model => model.Bug[0].CreationDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Bug[0].dueDate)
+                @Html.DisplayNameFor(model => model.Bug[0].DueDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Bug[0].Status)
@@ -47,10 +47,10 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.creationDate)
+                @Html.DisplayFor(modelItem => item.CreationDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.dueDate)
+                @Html.DisplayFor(modelItem => item.DueDate)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Status)
