Added name changes to some of the labels on the web page

--- a/Pages/Bugs/Index.cshtml
+++ b/Pages/Bugs/Index.cshtml
@@ -2,10 +2,10 @@
 @model BugTracker.Pages.Bugs.IndexModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Bugs";
 }
 
-<h1>Index</h1>
+<h1>Bugs</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
