--- a/Pages/Bugs/Delete.cshtml
+++ b/Pages/Bugs/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model BugTracker.Pages.Bugs.DeleteModel
 
 @{
@@ -61,7 +61,7 @@
             @Html.DisplayFor(model => model.Bug.Summary)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Bug.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
